--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,5 @@ asset/*
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 config.json
+
+.history
