:bug: Fixed bug

--- a/random_dick_length/assets/news_settings.json
+++ b/random_dick_length/assets/news_settings.json
@@ -46,10 +46,10 @@
         "这个大小不错的"
     ],
     "public_comment_2":[
-        "默认评价:很棒的牛子，下次还吃"
+        "默认评价：很棒的牛子，下次还吃"
     ],
     "public_comment_3":[
-        "默认评价:很棒的牛子，下次还吃"
+        "默认评价：很棒的牛子，下次还吃"
     ],
     "public_comment_4":[
         "什么牛子，我怎么没看到"
@@ -60,8 +60,8 @@
     "news_evaluate_0":[
         "哪来的兽人，怎么会这么长！",
         "哇哦！天生巨根！",
-        "FK ME,pls！",
-        "顶,,顶到胃了！",
+        "FK ME,pls!",
+        "顶，，顶到胃了！",
         "是打了激素嘛！"
     ],
     "news_evaluate_1":[
