Fuking Crazy Thursday！ vivo 50

--- a/random_dick_length/assets/news_settings.json
+++ b/random_dick_length/assets/news_settings.json
@@ -15,7 +15,7 @@
        
     ],
     "enchant":[
-        "附魔上了经验修补的",
+        "附魔上了经*修补的",
         "附魔上了火焰附加Ⅰ的",
         "附魔上了火焰附加Ⅱ的",
         "附魔上了火焰附加Ⅲ的",
