--- a/random_dick_length/assets/news_settings.json
+++ b/random_dick_length/assets/news_settings.json
@@ -14,30 +14,6 @@
         "正在劳作的"
        
     ],
-    "enchant":[
-        "附魔上了经*修补的",
-        "附魔上了火焰附加Ⅰ的",
-        "附魔上了火焰附加Ⅱ的",
-        "附魔上了火焰附加Ⅲ的",
-        "附魔上了火焰附加Ⅳ的",
-        "附魔上了火焰附加Ⅴ的",
-        "附魔上了耐久Ⅰ的",
-        "附魔上了耐久Ⅱ的",
-        "附魔上了耐久Ⅲ的",
-        "附魔上了耐久Ⅳ的",
-        "附魔上了耐久Ⅴ的",
-        "附魔上了力量Ⅰ的",
-        "附魔上了力量Ⅱ的",
-        "附魔上了力量Ⅲ的",
-        "附魔上了力量Ⅳ的",
-        "附魔上了力量Ⅴ的",
-        "附魔上了荆棘Ⅰ的",
-        "附魔上了荆棘Ⅱ的",
-        "附魔上了荆棘Ⅲ的",
-        "附魔上了荆棘Ⅳ的",
-        "附魔上了荆棘Ⅴ的",
-        "拥有消失诅咒的"
-    ],
     "public_comment_0":[
         "很棒的牛子，下次还吃",
         "这根太大了，有点受不了"
@@ -52,7 +28,8 @@
         "默认评价：很棒的牛子，下次还吃"
     ],
     "public_comment_4":[
-        "什么牛子，我怎么没看到"
+        "牛子? 什么牛子，我怎么没看到",
+        "牛牛，牛牛他离家出走辣！"
     ],
     "public_comment_5":[
         "这个腔不错的"
@@ -65,7 +42,8 @@
         "是打了激素嘛！"
     ],
     "news_evaluate_1":[
-        "还是蛮长的"
+        "还是蛮长的",
+        "还不错欸"
     ],
     "news_evaluate_2":[
         "到了平均水准捏"
@@ -80,6 +58,7 @@
     ],
     "news_evaluate_5":[
         "看来你的种族是龙，牛至他缩进去缝缝里去了欸！",
-        "牛至！牛至他缩进去了欸！"
+        "牛至！牛至他缩进去了欸！",
+        "我焯！黑洞0！"
     ]
 }
